# avengers-stage-2-backend

./: .env  .env.example  .eslintrc.js  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  app.js  djangoauthenticate.py  docker-compose.yml  nodemon.json  package.json  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
Authenticated/: Pipfile
Signup/: login.html
auth/: app.js  auth.js  index.js
config/: dev.env  keys.js  passport-setup.js
controllers/: business.controller.js  doc.controller.js  google.controller.js  user.controller.js
database design/: user-flow-diagram copy.dio
django-reset-password/: README.md
djangorest/: manage.py
docs/: backend-swagger copy.json  frontend-swagger.json  swagger.json
google/: package.json
kim_flask/: __main__.py  app.properties  pyproject.toml  requirements.txt
kim_flask/src/: .flaskenv  config.py  run.py
kim_flask/src/app/: __init__.py
kim_flask/src/app/blueprints/auth/: emails.py  routes.py
kim_flask/src/app/blueprints/errors/: handlers.py
kim_flask/src/app/models/: base.py  user.py
kim_flask/src/tests/: base.py  test_auth.py
login/: package.json
logout/: package.json
mail/: README.txt  contributors.txt  index.js  sendgrid.txt  signinEmailTemplate.js  signupEmailTemplate.js  signupEmailTemplate_2.js
models/: User.js  business.model.js  googleUser.js  passwordPlugin.js  user.model.js
myRoutes/: auth-routes.js
register/: package.json
resetPassword/: package.json
routers/: auth.js  google.js  index.js  users.js  users.route.js
server/: .babelrc  app.js
services/: auth.js  (+6 more)
(+78 files in other folders)
